--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
       - "${DB_PORT}:${DB_PORT}"
     restart: always
     volumes:
-      - database_data:/qdrant/storage
+      - ./vector_db:/qdrant/storage
 
   indexing_service:
     build:
@@ -60,6 +60,3 @@ services:
     depends_on:
       - indexing_service
       - qa_service
-
-volumes:
-  database_data:
